# stuff

./: .gitignore  LICENSE.txt  README.md
abindiff/: .gitignore  README.md  setup.py
abindiff/abindiff/: diff.py  dirdiff.py  dirpatch.py  patch.py
abindiff/tests/: conftest.py  test_diff.py  test_dirdiff.py  test_dirpatch.py  test_patch.py
amff2gif/: README.md  amff2gif.py
amtune/: README.md  amtune
authloghackers/: README.md  authloghackers.py
legacy/: README.md
legacy/AMTetris/: .gitignore  README.md  build.xml  meta.json
legacy/chatovod/: .gitignore  README  chatovod.py  chatovod2xmpp.py  config.cfg.example  pyjabberd_utilites.py
legacy/noname/: .gitignore  README.md  help_gui.txt  meta.json  project.properties
legacy/vk_api/: README  vk_api.py
metasave/: README.md  metachecksum.py  metasave.py  metastat.py
pixel_battle/: .gitignore  2018.json  2019.json  2020.json  README.md  env.sh  img2video_prepare.py  last.html  make_fast_timelapse.sh  make_preview.sh  make_timelapse.sh  palette_2019-10-10.json  pixel_battle.py  rgb_sha256sum.py
pixel_battle/pixel_battle/: __init__.py  __main__.py  (+10 more)
streamgrabber/: .gitignore  README.md  detect1tvclock.py  streamgrabber.py
tabun_stat/: .gitignore  MANIFEST.in  Makefile  README.md  config.example.toml  config.toml  datasource.example.toml  demo.sql  graph_config.toml  pyproject.toml  setup.py
tabun_stat/tabun_stat/: __main__.py  config.py  main.py  stat.py  types.py  utils.py
tabun_stat/tabun_stat/datasource/: base.py  sqlite3.py
tabun_stat/tabun_stat/graph/: __main__.py  charts.py  config.py  main.py  renderers.py
tabun_stat/tabun_stat/graph/css/: graph.css  plot.css
tabun_stat/tabun_stat/processors/: activity.py  base.py  birthdays.py  chars.py  checker.py  comments_counts.py  comments_counts_avg.py  comments_ratings.py  dices.py  flooders.py  images.py  necroposters.py  nicknames.py  oldfags.py  posts_counts.py  posts_counts_avg.py  posts_ratings.py  registrations.py  users_ratings.py  words.py
(+42 files in other folders)
